Fixed card work outer overflow in file 30 style and worked in file 31 style

--- a/CSS_advanced/styles/30-style.css
+++ b/CSS_advanced/styles/30-style.css
@@ -291,10 +291,7 @@ ul.row {
 
 .card-work .card-outer {
         position: relative;
-        width: 100%;
-        height: 30rem;
-        object-fit: cover;
-        vertical-align: bottom;
+        overflow: hidden;
 }
 
 .card-work .card-image img {
